RESOLVED FIXED181795
REGRESSION (r223604): Setting :before/after pseudo element on <noscript> asserts
https://bugs.webkit.org/show_bug.cgi?id=181795
Summary REGRESSION (r223604): Setting :before/after pseudo element on <noscript> asserts
Antti Koivisto
Reported 2018-01-18 05:04:18 PST
Pseudo elements on elements that don't disallow renderers outside CSS mechanisms (like <noscript>) hit asserts.
Attachments
patch (3.91 KB, patch)
2018-01-18 05:14 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2018-01-18 05:04:37 PST
Antti Koivisto
Comment 2 2018-01-18 05:14:49 PST
David Kilzer (:ddkilzer)
Comment 3 2018-01-18 09:00:53 PST
Comment on attachment 331612 [details] patch r=me
WebKit Commit Bot
Comment 4 2018-01-18 09:37:34 PST
Comment on attachment 331612 [details] patch Clearing flags on attachment: 331612 Committed r227145: <https://trac.webkit.org/changeset/227145>
WebKit Commit Bot
Comment 5 2018-01-18 09:37:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.