REGRESSION (r223604): Setting :before/after pseudo element on <noscript> asserts https://bugs.webkit.org/show_bug.cgi?id=181795 <rdar://problem/36334524>

Reviewed by David Kilzer.

Source/WebCore:

<noscript> disallows renderer generation outside CSS mechanisms, however we would still construct
PseudoElements for them during style resolution. These were never removed properly because the
pseudo element removal was tied to render tree teardown. Without proper removal the associated
animations were also not canceled.

Test: fast/css-generated-content/noscript-pseudo-anim-crash.html

* dom/Element.cpp:
(WebCore::Element::removedFromAncestor):

Take care to get rid of PseudoElements when the element is removed from the tree.
This also cancels any associated animations.

LayoutTests:

* fast/css-generated-content/noscript-pseudo-anim-crash-expected.txt: Added.
* fast/css-generated-content/noscript-pseudo-anim-crash.html: Added.


Canonical link: https://commits.webkit.org/197631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227145 268f45cc-cd09-0410-ab3c-d52691b4dbfc